--- a/index.html
+++ b/index.html
@@ -5,31 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,300;1,400&display=swap"
+      rel="stylesheet"
+    />
     <title>myPortfolio</title>
   </head>
   <body>
-    <div class="nav-bar">
-      <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </div>
-    <div class="about">
-      <div>
-        <h1>My name is Tomi Horvat</h1>
-        <h2>I'm a self taught front end developer</h2>
+    <header>
+      <div class="nav">
+        <nav class="nav-bar">
+          <ul>
+            <li class="nav-link>"><a href="#home">Home</a></li>
+            <li class="nav-link>"><a href="#about">About</a></li>
+            <li class="nav-link>"><a href="#projects">Projects</a></li>
+            <li class="nav-link>"><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
       </div>
+    </header>
+
+    <!-- ABOUT ME -->
+
+    <section class="about-me" id="about">
+      <h1>Hi, I am Tomi Horvat</h1>
+      <p>I'm a self taught front-end developer</p>
+
       <img
         src="/imgs/myPicture.jpg"
         alt="picture of me"
         width="400px"
         height="500px"
       />
-    </div>
-    <div class="info">
-      <h2>About me</h2>
+    </section>
+
+    <!-- INFO -->
+
+    <section class="info">
+      <h2 class="section-title">About me</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis,
         repudiandae odio dolorem blanditiis labore, tempora explicabo sed
@@ -43,8 +58,12 @@
         ducimus quis amet qui provident assumenda eius, maiores debitis quia
         laborum, neque minima?
       </p>
-    </div>
-    <div class="projects">
+    </section>
+
+    <!-- PROJECTS -->
+
+    <section class="projects">
+      <h2 class="section-title">My Projects</h2>
       <div class="project-box">
         <img
           src="/imgs/museumOfCandy.jpg"
@@ -55,16 +74,45 @@
         <h3>Museum of Candy</h3>
         <p>get code</p>
       </div>
-    </div>
-    <div class="project-box">
-      <img src="/imgs/price table.jpg" alt="" width="400px" height="200px" />
-      <h3>Price table</h3>
-      <p>get code</p>
-    </div>
-    <div class="project-box">
-      <img src="/imgs/productPage.jpg" alt="" width="400px" height="200px" />
-      <h3>Product Page</h3>
-      <p>get code</p>
-    </div>
+      <div class="project-box">
+        <img src="/imgs/price table.jpg" alt="" width="400px" height="200px" />
+        <h3>Price table</h3>
+        <p>get code</p>
+      </div>
+      <div class="project-box">
+        <img src="/imgs/productPage.jpg" alt="" width="400px" height="200px" />
+        <h3>Product Page</h3>
+        <p>get code</p>
+      </div>
+    </section>
+
+    <!--  CONTACT  -->
+
+    <section class="contact">
+      <h2 class="section-title">Contact me</h2>
+      <div class="contact">
+        <a href="#"
+          ><img
+            src="/imgs/facebook.svg"
+            alt="facebook"
+            width="50px"
+            height="50px"
+        /></a>
+      </div>
+      <div class="contact">
+        <a href="#"
+          ><img src="/imgs/github.svg" alt="gitHub" width="50px" height="50px"
+        /></a>
+      </div>
+      <div class="contact">
+        <a href="#"
+          ><img
+            src="/imgs/instagram.svg"
+            alt="instagram"
+            width="50px"
+            height="50px"
+        /></a>
+      </div>
+    </section>
   </body>
 </html>
