adding some styling

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
     <!-- ABOUT ME -->
 
     <section class="about-me" id="about">
-      <h1>Hi, I am Tomi Horvat</h1>
-      <p>I'm a self taught front-end developer</p>
+      <div class="about">
+        <h1>Hi, I am Tomi Horvat</h1>
+        <p>I'm a self taught front-end developer</p>
+        <div class="word"></div>
+      </div>
 
       <img
         src="/imgs/myPicture.jpg"
