added some more css and media querys

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,300;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap"
       rel="stylesheet"
     />
     <title>myPortfolio</title>
@@ -28,75 +30,89 @@
     </header>
 
     <!-- ABOUT ME -->
+    <div class="desktop">
+      <section class="about-me" id="about">
+        <div class="about">
+          <h1>Hey, I am Tomi Horvat</h1>
+          <p>I'm a self taught front-end developer</p>
+        </div>
 
-    <section class="about-me" id="about">
-      <div class="about">
-        <h1>Hi, I am Tomi Horvat</h1>
-        <p>I'm a self taught front-end developer</p>
-        <div class="word"></div>
-      </div>
+        <img
+          class="about-me-img"
+          src="/imgs/myPicture.jpg"
+          alt="picture of me"
+          width="400px"
+          height="500px"
+        />
+      </section>
 
-      <img
-        src="/imgs/myPicture.jpg"
-        alt="picture of me"
-        width="400px"
-        height="500px"
-      />
-    </section>
+      <!-- INFO -->
 
-    <!-- INFO -->
-
-    <section class="info">
-      <h2 class="section-title">About me</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis,
-        repudiandae odio dolorem blanditiis labore, tempora explicabo sed
-        voluptatum inventore officia velit provident dignissimos commodi harum.
-        Voluptates veritatis at sit! Consectetur. Accusamus assumenda quis
-        obcaecati possimus pariatur magnam ipsa quia labore voluptas impedit,
-        quam neque quas necessitatibus blanditiis temporibus tempore deserunt
-        laborum fugiat maiores repellendus dicta nesciunt qui hic incidunt?
-        Officiis! Magni ipsum dolores explicabo quo error? Modi ea at
-        consectetur quaerat consequatur illum vero magni recusandae repudiandae
-        ducimus quis amet qui provident assumenda eius, maiores debitis quia
-        laborum, neque minima?
-      </p>
-    </section>
-
+      <section class="info">
+        <h2 class="section-title">About me</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis,
+          repudiandae odio dolorem blanditiis labore, tempora explicabo sed
+          voluptatum inventore officia velit provident dignissimos commodi
+          harum. Voluptates veritatis at sit! Consectetur. Accusamus assumenda
+          quis obcaecati possimus pariatur magnam ipsa quia labore voluptas
+          impedit, quam neque quas necessitatibus blanditiis temporibus tempore
+          deserunt laborum fugiat maiores repellendus dicta nesciunt qui hic
+          incidunt? Officiis! Magni ipsum dolores explicabo quo error? Modi ea
+          at consectetur quaerat consequatur illum vero magni recusandae
+          repudiandae ducimus quis amet qui provident assumenda eius, maiores
+          debitis quia laborum, neque minima?
+        </p>
+      </section>
+    </div>
     <!-- PROJECTS -->
 
-    <section class="projects">
+    <section class="myProjects" id="projects">
       <h2 class="section-title">My Projects</h2>
-      <div class="project-box">
-        <img
-          src="/imgs/museumOfCandy.jpg"
-          alt=""
-          width="400px"
-          height="200px"
-        />
-        <h3>Museum of Candy</h3>
-        <p>get code</p>
-      </div>
-      <div class="project-box">
-        <img src="/imgs/price table.jpg" alt="" width="400px" height="200px" />
-        <h3>Price table</h3>
-        <p>get code</p>
-      </div>
-      <div class="project-box">
-        <img src="/imgs/productPage.jpg" alt="" width="400px" height="200px" />
-        <h3>Product Page</h3>
-        <p>get code</p>
+      <div class="projects">
+        <div class="project-box">
+          <img
+            src="/imgs/museumOfCandy.jpg"
+            alt=""
+            width="400px"
+            height="200px"
+          />
+          <h3>Museum of Candy</h3>
+          <p>get code</p>
+        </div>
+        <div class="project-box">
+          <img
+            src="/imgs/price table.jpg"
+            alt=""
+            width="400px"
+            height="200px"
+          />
+          <h3>Price table</h3>
+          <p>get code</p>
+        </div>
+        <div class="project-box">
+          <img
+            src="/imgs/productPage.jpg"
+            alt=""
+            width="400px"
+            height="200px"
+          />
+          <h3>Product Page</h3>
+          <p>get code</p>
+        </div>
       </div>
     </section>
 
     <!--  CONTACT  -->
 
-    <section class="contact">
-      <h2 class="section-title">Contact me</h2>
+    <section class="contact" id="contact">
+      <div>
+        <h2 class="section-title">Contact me</h2>
+      </div>
       <div class="contact">
         <a href="#"
           ><img
-            src="/imgs/facebook.svg"
+            src="/imgs/Anonymous-aiga-mail-bg.svg"
             alt="facebook"
             width="50px"
             height="50px"
